--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-parallax-tilt": "^1.5.47",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "rellax": "^1.12.1",
